# nexuses-neurodrakes-react

./: .env.example  .gitignore  PLUGIN_USAGE.md  README.md  __init__.py  index.html  package-lock.json  package.json  plugin.yaml  pyproject.toml  schemas.py  script.js  stack.py  style.css  tools.py  vite.config.ts
api/: dm.ts
public/assets/: chars.json  items.json  monsters.json  nexuses.json
scripts/: check-hermes-responses.mjs
skills/: __init__.py
skills/nexuses-neurodrakes/: SKILL.md  __init__.py
src/: App.tsx  dm-prompt.md  index.css  index.html  main.js  styles.css
src/components/: AIDebugSidePanel.tsx  ParleyScreen.tsx
src/engine/: dmHandler.parley.test.ts  dmHandler.ts  parley.test.ts  parley.ts  soundGenerator.ts  soundManager.ts
src/hooks/: useParleyAI.test.ts  useParleyAI.ts  useParleyState.ts
